--- a/frontend/src/components/Card/card.css
+++ b/frontend/src/components/Card/card.css
@@ -8,7 +8,7 @@
     margin: 10px 5px 20px;
     vertical-align: top;
     max-width: 250px;
-    min-height: 350px;
+    min-height: 400px;
     display: inline-block;
     
 }
@@ -21,10 +21,14 @@
 }
 
 .card .card-title {
+    text-align: center;
     margin: 0;
     color: #395157;
+    white-space: nowrap;
+    font-size: 1.3rem;
 }
 
 .card .card-text {
     color: black;
+    font-size: 1rem;
 }
