fix: cards and margin for fruits/veggies/plants on beginner page

--- a/frontend/src/components/Card/plantGalleryCard.css
+++ b/frontend/src/components/Card/plantGalleryCard.css
@@ -30,7 +30,7 @@
 }
 
 .guideGalleryCard .card-text {
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 1.1rem;
     text-align: left;
 }
