--- a/frontend/src/pages/ResourcesPage/buy_supplies.css
+++ b/frontend/src/pages/ResourcesPage/buy_supplies.css
@@ -16,6 +16,11 @@
     overflow: hidden;
     text-align: center;
   }
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px #BABABA;
+    transition: all 0.3s ease;
+  }
   
   /* Card header */
   .card-header {
