--- a/frontend/src/pages/ResourcesPage/tools.css
+++ b/frontend/src/pages/ResourcesPage/tools.css
@@ -6,3 +6,9 @@
 .gallery .card {
     background: #C0E3A3;
 }
+
+.gallery .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px #BABABA;
+    transition: all 0.3s ease;
+}
