--- a/frontend/src/pages/LocatePage/LocateTop.css
+++ b/frontend/src/pages/LocatePage/LocateTop.css
@@ -1,4 +1,5 @@
-    .LocateAGarden h1 {
+  .LocateAGarden h1 {
+    margin-top: 3rem;
     color: #395157;
     font-weight: bold;
     font-size: 3rem;
