--- a/frontend/src/pages/LocatePage/LocateTop.css
+++ b/frontend/src/pages/LocatePage/LocateTop.css
@@ -1,7 +1,8 @@
-    .LocateAGarden h1 {
+  .LocateAGarden h1 {
     color: #395157;
     font-weight: bold;
     font-size: 3rem;
+    margin-top: 1.5rem;
     margin-bottom: 0.5rem;
     margin-left: 1rem;
   }
